--- a/templates/bar/index.html.twig
+++ b/templates/bar/index.html.twig
@@ -1,20 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BarController!{% endblock %}
+{% block title %}Bar - Main{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container-fluid">
+    <div class="row py-5">
+        <div class="col-3">
+            <h3>Equipes</h3>
+            <div class="row">
+                <div class="col-12">
+                    <div class="list-group">
+                        {% for team in teams %}
+                            <a href="{{ path('bar', {'teamName' : (team.teamName)}) }}" class="list-group-item list-group-item-action {% if loop.index is odd %}list-group-item-secondary{% endif %}">{{ team.teamName }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-3">
+            <h3>Players</h3>
+            {% if selectedTeam is not empty %}
+                <div class="list-group col-12">
+                {% for  player in selectedTeam.players%}
+                    <a href="#" class="list-group-item list-group-item-action {% if loop.index is odd %}list-group-item-secondary{% endif %}">{{ player.name }}</a>
+                    {% else %}
+                    <div>Pas encore de joueurs inscrits</div>
+                {% endfor %}
+                </div>
+                <div class="col-10">
+                    <button id="addPlayerBtn" class="btn btn-success my-2">+</button>
+                    {% include '_insert/_newPlayerForm.html.twig' %}
+                </div>
+            {% endif %}
+        </div>
+        <div class="col-4">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/sebast/DEV/projets/KYM/src/Controller/BarController.php'|file_link(0) }}">src/Controller/BarController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/sebast/DEV/projets/KYM/templates/bar/index.html.twig'|file_link(0) }}">templates/bar/index.html.twig</a></code></li>
-    </ul>
+        </div>
+    </div>
 </div>
+{% endblock %}
+{% block javascripts %}
+<script src="/assets/js/newplayerbar.js" type="text/javascript"></script>
 {% endblock %}
