layout selection joueur v1

--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -1,3 +1,11 @@
 #playerForm {
     display: none;
 }
+
+.staff-select-interface {
+    max-height : 100px;
+}
+
+.scrollable {
+    overflow-y:scroll;
+}
