ajout produit dans layout

--- a/templates/bar/index.html.twig
+++ b/templates/bar/index.html.twig
@@ -3,55 +3,77 @@
 {% block title %}Bar - Main{% endblock %}
 
 {% block body %}
-<div class="container-fluid">
+<div class="container-fluid bar-container">
     <div class="row py-5 staff-select-interface">
-        <div class="col-3">
-            <h3>Equipes</h3>
+        <div class="col-6">
             <div class="row">
-                <div class="col-12 scrollable">
-                    <div class="list-group">
-                        {% for team in teams %}
-                            <a href="{{ path('bar', {'teamName' : (team.teamName)}) }}" class="
-                            list-group-item
-                            list-group-item-action
-                            {% if selectedTeam is not empty  and selectedTeam.id == team.id%}
-                            active
-                            {% endif %}
-                            ">{{ team.teamName }}</a>
-                        {% endfor %}
+                <div class="col-6">
+                    <h3>Equipes</h3>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="list-group overflow-auto h-75">
+                                {% for team in teams %}
+                                    <a href="{{ path('bar', {'teamName' : (team.teamName)}) }}" class="
+                                    list-group-item
+                                    list-group-item-action
+                                    {% if selectedTeam is not empty  and selectedTeam.id == team.id%}
+                                    active
+                                    {% endif %}
+                                    ">{{ team.teamName }}</a>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <h3>Players</h3>
+                    <div class="row">
+                        <div class="col-12">
+                        {% if selectedTeam is not empty %}
+                            <div class="list-group overflow-auto h-75">
+                            {% for  player in selectedTeam.players%}
+                                <a href="{{ path('bar', {'teamName' : (selectedTeam.teamName), 'playerId' : (player.id)}) }}" class="
+                                    list-group-item
+                                    list-group-item-action
+                                    {% if selectedPlayer is not empty  and selectedPlayer.id == player.id%}
+                                        active
+                                        {% endif %}">{{ player.name }}</a>
+                                {% else %}
+                                <div>Pas encore de joueurs inscrits</div>
+                            {% endfor %}
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <button id="addPlayerBtn" class="btn btn-success mb-2">+</button>
+                            {% include '_insert/_newPlayerForm.html.twig' %}
+                        </div>
+                    {% endif %}
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-3">
-            <h3>Players</h3>
-            {% if selectedTeam is not empty %}
-                <div class="list-group col-12 scrollable">
-                {% for  player in selectedTeam.players%}
-                    <a href="{{ path('bar', {'teamName' : (selectedTeam.teamName), 'playerId' : (player.id)}) }}" class="
-                        list-group-item
-                        list-group-item-action
-                        {% if selectedPlayer is not empty  and selectedPlayer.id == player.id%}
-                            active
-                            {% endif %}">{{ player.name }}</a>
-                    {% else %}
-                    <div>Pas encore de joueurs inscrits</div>
-                {% endfor %}
-                </div>
-                <div class="col-10">
-                    <button id="addPlayerBtn" class="btn btn-success my-2">+</button>
-                    {% include '_insert/_newPlayerForm.html.twig' %}
-                </div>
-            {% endif %}
-        </div>
-        <div class="col-4">
-            {% if selectedPlayer is not empty %}
-            <div class="card">
-                <div class="card-body">
-                    <div>{{ selectedPlayer.name }}</div>
+            <div class="row">
+                <div class="col-6">
+                    {% if selectedPlayer is not empty %}
+                        <div class="card p-3">
+                            <div class="card-body">
+                                <div>{{ selectedPlayer.name }}</div>
+                            </div>
+                        </div>
+                    {% endif  %}
                 </div>
             </div>
-            {% endif  %}
+        </div>
+        <div class="col-6">
+            <div class="row h-50">
+                {% for product in products %}
+                    <div class="card col-3">
+                        {{ product.name }}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="row">
+
+            </div>
         </div>
     </div>
 </div>
