--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -2,4 +2,12 @@
     display: none;
 }
 
+div .list-group {
+    height: 30vh !important;
+}
+
+.product {
+    height : 150px;
+    width: 150px;
+}
 
