ajout calcul montant du et nombre de consigne dans entité Player

--- a/templates/bar/index.html.twig
+++ b/templates/bar/index.html.twig
@@ -35,6 +35,8 @@
                                 <div class="card p-3">
                                     <div class="card-body">
                                         <div>{{ selectedPlayer.name }}</div>
+                                        <div>Total : {{ selectedPlayer.dueCheck }}</div>
+                                        <div>Nombre de consignes : {{ selectedPlayer.countConsigne }}</div>
                                     </div>
                                 </div>
                             {% endif  %}
